--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ We are volunteers who are working to benefit our local and international communi
     </footer>
 
     <noscript>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="styles.css">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i,700" rel="stylesheet">
     </noscript>
 
