Temporary addition of styles link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <meta name="msapplication-TileImage" content="images/manifest/images/icons/icon-512x512.png">
     <meta name="msapplication-TileColor" content="">
     <meta name="msapplication-tap-highlight" content="no">
-
+    <link rel="stylesheet" href="styles.css">
     <style>
       // Styles for the above fold
     </style>
