FQDN added to images

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@ header.banner {background: url("images/disability-games.jpg") no-repeat; backgro
     <header id="page-header">
       <h1>
         <picture>
-          <source srcset="images/rcos-large.png, images/rcos-large-retina.png 2x" media="(min-width: 800px)">
-          <source srcset="images/rcos-small.png, images/rcos-large.png 2x" media="(max-width: 799px)" >
-          <img src="images/rcos-small.png, images/rcos-large.png 2x" alt="Rotary Club of Scunthorpe">
+          <source srcset="http://www.robjefferson.uk/rotary-club-of-scunthorpe/images/rcos-large.png, images/rcos-large-retina.png 2x" media="(min-width: 800px)">
+          <source srcset="http://www.robjefferson.uk/rotary-club-of-scunthorpe/images/rcos-small.png, images/rcos-large.png 2x" media="(max-width: 799px)" >
+          <img src="http://www.robjefferson.uk/rotary-club-of-scunthorpe/images/rcos-small.png, images/rcos-large.png 2x" alt="Rotary Club of Scunthorpe">
         </picture>
       </h1>
       <nav>
