Install of SASS and media queries

--- a/index.html
+++ b/index.html
@@ -128,33 +128,37 @@ We are volunteers who are working to benefit our local and international communi
           </a>
         </div>
       </header>
-      <section id="meeting-info">
-        <div>
-          <h2>Meeting info</h2>
-          <h3>Location:</h3>
-          <p>Wortley House Hotel, Roland Road, Scunthorpe, DN16 1SU</p>
-        </div>
-        <div>
-          <h3>Day of the week:</h3>
-          <p>Tuesday</p>
-        </div>
-        <div>
-          <h3>Time:</h3>
-          <p>1.00 pm</p>
-        </div>
-      </section>
-      <section>
-        <h2>About us</h2>
-        <p>Formed in 1928 the Rotary Club of Scunthorpe is one of the oldest in Britain and Ireland. A members club of professional men and women, we meet together regularly on a social basis and with the aim of helping communities – locally, nationally and, through Rotary International, people overseas who are less fortunate than ourselves.</p>
-      </section>
+      <div id="main-sections">
+        <section id="meeting-info">
+          <div>
+            <h2>Meeting info</h2>
+            <h3>Location:</h3>
+            <p>Wortley House Hotel, Roland Road, Scunthorpe, DN16 1SU</p>
+          </div>
+          <div>
+            <h3>Day of the week:</h3>
+            <p>Tuesday</p>
+          </div>
+          <div>
+            <h3>Time:</h3>
+            <p>1.00 pm</p>
+          </div>
+        </section>
+        <section>
+          <h2>About us</h2>
+          <p>Formed in 1928 the Rotary Club of Scunthorpe is one of the oldest in Britain and Ireland. A members club of professional men and women, we meet together regularly on a social basis and with the aim of helping communities – locally, nationally and, through Rotary International, people overseas who are less fortunate than ourselves.</p>
+        </section>
 
-      <section>
-        <h2>Latest news</h2>
-      </section>
+        <section>
+          <h2>Latest news</h2>
+          <p>This is a test. Formed in 1928 the Rotary Club of Scunthorpe is one of the oldest in Britain. Formed in 1928 the Rotary Club of Scunthorpe is one of the oldest in Britain.</p>
+        </section>
 
-      <section>
-        <h2>Our work</h2>
-      </section>
+        <section>
+          <h2>Our work</h2>
+          <p>This is a test. Formed in 1928 the Rotary Club of Scunthorpe is one of the oldest in Britain. Formed in 1928 the Rotary Club of Scunthorpe is one of the oldest in Britain.</p>
+        </section>
+      </div>
     </main>
 
     <footer id="page-footer">
@@ -164,7 +168,7 @@ We are volunteers who are working to benefit our local and international communi
     </footer>
 
     <noscript>
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="css/styles.css">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i,700" rel="stylesheet">
     </noscript>
 
@@ -172,7 +176,7 @@ We are volunteers who are working to benefit our local and international communi
       // adds styles later
       var style = document.createElement('link')
       style.rel = 'stylesheet'
-      style.href = 'styles.css'
+      style.href = 'css/styles.css'
       var first = document.getElementsByTagName('link')[0]
       first.parentNode.insertBefore(style, first)
 
