--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ We are volunteers who are working to benefit our local and international communi
 
         <section>
           <h2>Latest news</h2>
-          <p>This is a test. Formed in 1928 the Rotary Club of Scunthorpe is one of the oldest in Britain. Formed in 1928 the Rotary Club of Scunthorpe is one of the oldest in Britain.</p>
+          <p>This is yet another test. Formed in 1928 the Rotary Club of Scunthorpe is one of the oldest in Britain. Formed in 1928 the Rotary Club of Scunthorpe is one of the oldest in Britain.</p>
         </section>
 
         <section>
